--- a/staff.html
+++ b/staff.html
@@ -2,73 +2,179 @@
 <html lang="en">
 
 <head>
+  <meta name="keywords" content="Daycare, babies, todlers" />
+  <meta name="description" content="We recognize the need for a school that stimulates a child to reach every milestone, 
+      as well as caring for your child where they feel loved, safe and happy." />
+  <meta name="subject" content="Child care" />
+  <meta name="copyright" content="goggaliefiesdagsorg, Lesawi Servicess cc" />
+  <meta name="robots" content="index,follow" />
+  <meta name="Classification" content="Business" />
+  <meta name="author" content="Wim von Benecke, info@lesawi.co.za, 0710992811" />
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Staff</title>
+  <title>Goggaliefies Staff</title>
   <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="staff.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
 </head>
 
 <body>
-  <header class="container">
-    <div class="d-flex justify-content-around">
-      <div>
-        <img class="img-fluid logo" src="images/download.jpg" alt="" />
-      </div>
-      <div class="align-self-center">
-        <h3>Staff</h3>
-      </div>
-      <div class="align-self-center email">
-        <a href="mailto:goggaliefiesdagsorg@gmail.com">
-          <p>Email: goggaliefiesdagsorg@gmail.com</p>
-        </a>
-        <p>Tel: 066 575 5891</p>
-      </div>
-    </div>
-  </header>
-  <nav class="navbar navbar-expand-lg navbar-light container">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-      aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="contactUs.html">Contact Us<span class="sr-only">(current)</span>
+  <div class="bg">
+    <header class="container">
+      <div style="text-align: center">
+        <div>
+          <img class="logo" src="images/download.jpg" alt="School logo" />
+        </div>
+        <br />
+        <div>
+          <h1>GOGGALIEFIES DAY CARE</h1>
+        </div>
+        <br />
+        <div class="email">
+          <a href="mailto:goggaliefiesdagsorg@gmail.com">
+            <p>Email: goggaliefiesdagsorg@gmail.com</p>
           </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="schoolHours.html">School Hours<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="photos.html">Photos<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="weOffer.html">What we offer<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="products.html">Products<span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <hr class="container" />
-  <section></section>
-  <hr class="container" />
-  <footer class="container">
-    <p>&copy - Goggaliefies Dagsorg 2019 - 2022</p>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-    crossorigin="anonymous"></script>
+          </br>
+          <p>Tel: 066 575 5891</p>
+        </div>
+      </div>
+    </header>
+
+    <!--Navigation with button for phones-->
+    <nav class="navbar navbar-expand-lg navbar-light container">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse menu" id="navbarTogglerDemo01">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">
+              Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="contactUs.html">
+              Contact Us
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="schoolHours.html">
+              School Hours
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="photos.html">
+              Photos
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="weOffer.html">
+              What we offer
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="staff.html">
+              Staff Members
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="products.html">
+              Products
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <hr class="container" />
+    <section class="container">
+
+      <div style="text-align: center;">
+        <div class="polaroid box">
+          <p>Cinque Terre</p>
+          <img src="./images/more/staffPhotos/Leone.webp" alt="5 Terre" style="width:100%">
+          <div class="container">
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+          </div>
+        </div>
+        <div class="polaroid box1">
+          <p>Cinque Terre</p>
+          <img src="./images/more/staffPhotos/Leone.webp" alt="5 Terre" style="width:100%">
+          <div class="container">
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+          </div>
+        </div>
+        <div class="polaroid box2">
+          <p>Cinque Terre</p>
+          <img src="./images/more/staffPhotos/Leone.webp" alt="5 Terre" style="width:100%">
+          <div class="container">
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+          </div>
+        </div>
+        <div class="polaroid box1">
+          <p>Cinque Terre</p>
+          <img src="./images/more/staffPhotos/Leone.webp" alt="5 Terre" style="width:100%">
+          <div class="container">
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+          </div>
+        </div>
+        <div class="polaroid box">
+          <p>Cinque Terre</p>
+          <img src="./images/more/staffPhotos/Leone.webp" alt="5 Terre" style="width:100%">
+          <div class="container">
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+          </div>
+        </div>
+        <div class="polaroid box2">
+          <p>Cinque Terre</p>
+          <img src="./images/more/staffPhotos/Leone.webp" alt="5 Terre" style="width:100%">
+          <div class="container">
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+          </div>
+        </div>
+        <div class="polaroid box">
+          <p>Cinque Terre</p>
+          <img src="./images/more/staffPhotos/Leone.webp" alt="5 Terre" style="width:100%">
+          <div class="container">
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+            <p>Cinque Terre</p>
+          </div>
+        </div>
+    </section>
+    <br />
+    <footer class="container">
+      <p>&copy - Goggaliefies Dagsorg 2019 - 2022</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+      </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous">
+      </script>
+  </div>
 </body>
 
 </html>
