--- a/test.html
+++ b/test.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="test.css" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="test.css">
-  <link rel="stylesheet" href="index.css">
-</head>
-
-<body>
-  <section class="container">
-    <div class="box">
-      <p>Div</p>
-    </div>
-  </section>
-</body>
-
+  <body>
+    <section class="container">
+      <a href="https://my.forms.app/form/625b93e9e911ef58a52f6f53">
+        submit a form
+      </a>
+    </section>
+  </body>
 </html>
