--- a/contactUs.html
+++ b/contactUs.html
@@ -1,75 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us</title>
-  <link rel="stylesheet" href="index.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
-</head>
+  <body>
+    <div class="bg">
+      <header class="container">
+        <div class="d-flex justify-content-around">
+          <div>
+            <img class="img-fluid logo" src="images/download.jpg" alt="" />
+          </div>
+          <div class="align-self-center">
+            <h3>Contact Us</h3>
+          </div>
+          <div class="align-self-center email">
+            <a href="mailto:goggaliefiesdagsorg@gmail.com">
+              <p>Email: goggaliefiesdagsorg@gmail.com</p>
+            </a>
+            <p>Tel: 066 575 5891</p>
+          </div>
+        </div>
+      </header>
+      <nav class="navbar navbar-expand-lg navbar-light container">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">
+                Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="schoolHours.html">
+                School Hours<span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="photos.html">
+                Photos<span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="weOffer.html">
+                What we offer<span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="staff.html">
+                Staff Members<span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="products.html">
+                Products<span class="sr-only">(current)</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <hr class="container" />
 
-<body>
-  <header class="container">
-    <div class="d-flex justify-content-around">
-      <div>
-        <img class="img-fluid logo" src="images/download.jpg" alt="" />
-      </div>
-      <div class="align-self-center">
-        <h3>Contact Us</h3>
-      </div>
-      <div class="align-self-center email">
-        <a href="mailto:goggaliefiesdagsorg@gmail.com">
-          <p>Email: goggaliefiesdagsorg@gmail.com</p>
-        </a>
-        <p>Tel: 066 575 5891</p>
-      </div>
+      <section class="container">
+        <div class="contact">
+          <p>
+            <strong>
+              Are you interested in finding out more about Goggaliefies Day
+              Care?
+            </strong>
+            <br />
+            Feel free to contact us, and a member of our team will contact you
+            as soon as possible.
+          </p>
+          <p>
+            <strong>Adress: </strong>
+            Plot 68, Milner Road, White River
+          </p>
+          <p>
+            <strong> Email: </strong>
+            goggaliefiesdagsorg@gmail.com
+          </p>
+          <p>
+            <strong>Give us a call:</strong>
+            066 575 5891
+          </p>
+          <p class="email">
+            <a href="https://my.forms.app/form/625b93e9e911ef58a52f6f53">
+              Submit your contact details and we will call you.
+            </a>
+          </p>
+        </div>
+      </section>
+      <hr class="container" />
+      <footer class="container">
+        <p>&copy - Goggaliefies Dagsorg 2019 - 2022</p>
+      </footer>
+      <script
+        src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"
+      ></script>
     </div>
-  </header>
-  <nav class="navbar navbar-expand-lg navbar-light container">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-      aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="schoolHours.html">School Hours<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="photos.html">Photos<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="weOffer.html">What we offer<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="staff.html">Staff Members<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="products.html">Products<span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <hr class="container" />
-  <section></section>
-  <hr class="container" />
-  <footer class="container">
-    <p>&copy - Goggaliefies Dagsorg 2019 - 2022</p>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-    crossorigin="anonymous"></script>
-</body>
-
+  </body>
 </html>
 
 <!-- 
