--- a/contactUs.html
+++ b/contactUs.html
@@ -29,6 +29,7 @@
             <a href="mailto:goggaliefiesdagsorg@gmail.com">
               <p>Email: goggaliefiesdagsorg@gmail.com</p>
             </a>
+            <br />
             <p>Tel: 066 575 5891</p>
           </div>
         </div>
@@ -83,7 +84,7 @@
       </nav>
       <hr class="container" />
 
-      <section class="container">
+      <section style="text-align: center" class="container">
         <div class="contact">
           <p>
             <strong>
@@ -91,28 +92,40 @@
               Care?
             </strong>
             <br />
+            <br />
             Feel free to contact us, and a member of our team will contact you
             as soon as possible.
           </p>
+          <br />
+          <br />
           <p>
             <strong>Adress: </strong>
             Plot 68, Milner Road, White River
           </p>
+          <br />
+          <br />
           <p>
             <strong> Email: </strong>
             goggaliefiesdagsorg@gmail.com
           </p>
+          <br />
+          <br />
           <p>
             <strong>Give us a call:</strong>
             066 575 5891
           </p>
-          <p class="email">
+          <br />
+          <br />
+          <p>
             <a href="https://my.forms.app/form/625b93e9e911ef58a52f6f53">
               Submit your contact details and we will call you.
             </a>
           </p>
         </div>
       </section>
+      <br />
+      <br />
+      <br />
       <hr class="container" />
       <footer class="container">
         <p>&copy - Goggaliefies Dagsorg 2019 - 2022</p>
