--- a/photos.html
+++ b/photos.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photos</title>
     <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/images.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./images.css" />
   </head>
 
   <body>
+    <div class="bg">
     <header class="container">
       <div class="d-flex justify-content-around">
         <div>
@@ -84,11 +85,84 @@
 
     <section class="container" style="text-align: center">
       <span>
-        <img
-          class="infPhotoStaff"
-          src="./images/more/staffPhotos/268440938_1306845239786347_5033524143132079380_n.jpg"
-          alt="Group staff photo"
-        />
+        
+          <img
+            class="infPhotoStaff"
+            src="./images/more/staffPhotos/268440938_1306845239786347_5033524143132079380_n.jpg"
+            alt="Group staff photo"
+          />
+          <br />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_05379cab5f634a61a89863c4d917358d_mv2_d_6000_4000_s_4_2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_078bf20cf9194686ac36c33bc70c3862_mv2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_0a0ad28f1cbf41b9be1e09d7ab472cd6_mv2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_113f3ed8b12c4927aec221f9491f2250_mv2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_05379cab5f634a61a89863c4d917358d_mv2_d_6000_4000_s_4_2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_078bf20cf9194686ac36c33bc70c3862_mv2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_0a0ad28f1cbf41b9be1e09d7ab472cd6_mv2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_113f3ed8b12c4927aec221f9491f2250_mv2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_05379cab5f634a61a89863c4d917358d_mv2_d_6000_4000_s_4_2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_078bf20cf9194686ac36c33bc70c3862_mv2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_0a0ad28f1cbf41b9be1e09d7ab472cd6_mv2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_113f3ed8b12c4927aec221f9491f2250_mv2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_0a0ad28f1cbf41b9be1e09d7ab472cd6_mv2.webp"
+            alt=""
+          />
+          <img
+            class="infPhoto"
+            src="images/photos/125184_113f3ed8b12c4927aec221f9491f2250_mv2.webp"
+            alt=""
+          />
+        </div>
       </span>
     </section>
 
